fix: fixed scrollbars, scrollable but with no scrollbar visible lol

--- a/src/styles.css
+++ b/src/styles.css
@@ -51,6 +51,9 @@
   }
 }
 
+::-webkit-scrollbar {
+  width: 0px;
+}
 
 
 @layer base {
